--- a/src/components/generic-table-component/GenericTableComponent.css
+++ b/src/components/generic-table-component/GenericTableComponent.css
@@ -1,6 +1,48 @@
-tr {
-  font-size: 24px;
+* {
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
-td {
-  background-color: aqua;
+table {
+  border-collapse: collapse;
+  width: 25em;
+  background-color: white;
+  border-radius: 5px;
+  box-shadow: 0px 10px 30px 5px rgba(0, 0, 0, 0.15);
+  margin: 25px auto;
+}
+
+table thead tr {
+  border-bottom: 1px dashed grey;
+}
+
+table thead tr th {
+  font-size: 16px;
+  letter-spacing: 1px;
+  color: grey;
+  padding: 18px;
+  text-transform: uppercase;
+}
+
+table tbody tr:nth-child(even) {
+  background-color: lightgray;
+}
+
+table thead tr th:nth-child(4),
+table thead tr th:nth-child(5) {
+  text-align: left;
+}
+
+table thead tr th:nth-child(6) {
+  text-align: right;
+}
+
+table tbody tr td:nth-child(6) {
+  text-align: right;
+}
+
+table tbody tr td {
+  font-size: 16px;
+  letter-spacing: 1px;
+  /* color: grey; */
+  padding: 18px;
 }
